--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="LunchApp">
+<html lang="en" ng-app="VeteranApp">
     <head>
         <meta charset="UTF-8">
         <title>Veteran PTSD Hackathon</title>
